--- a/src/metro/css/index.css
+++ b/src/metro/css/index.css
@@ -1506,50 +1506,110 @@ template { display: none; }
 
 .slideOutUp { -webkit-animation-name: slideOutUp; animation-name: slideOutUp; }
 
-html { background: #ba131a; }
-
 body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; }
 
-.container { position: relative; height: 100%; }
+.container { position: relative; width: 100%; height: 100%; overflow: hidden; }
 
 .container img { display: block; width: 100%; }
 
-.container .lamp { position: absolute; top: -10.6%; left: 0; width: 7.84rem; }
+.container .page { position: relative; width: 100%; height: 100%; background-color: #ba131a; }
 
-.container .fireworks { position: absolute; top: -7.7%; right: 0; width: 10.08rem; }
+.container .loading .firelantern { position: absolute; top: -10.6%; left: .2rem; width: 9.8rem; }
 
-.container .newyear { position: absolute; top: 12.6%; width: 100%; }
+.container .loading .confetti1 { position: absolute; top: 12.8%; left: 22.6%; width: 10.92rem; }
 
-.container .newyear img { width: 8.44rem; margin: 0 auto; }
+.container .loading .snowmanDog { position: absolute; bottom: 0; left: 0; width: 100%; }
 
-.container .cloud1 { position: absolute; top: 33.6%; left: .4rem; width: 2.96rem; }
+.container .loading .confetti2 { position: absolute; bottom: .32rem; right: .48rem; width: 10.92rem; }
 
-.container .cloud2 { position: absolute; top: 29.4%; right: -.4rem; width: 4rem; }
+.container .loading .word1 { position: absolute; top: 5.4%; right: .36rem; width: 5.6rem; }
 
-.container .snowflake { position: absolute; top: 39.8%; left: .4rem; width: 14.56rem; }
+.container .loading .television { position: absolute; top: 24.7%; left: 1.9%; width: 96.2%; }
 
-.container .snow { position: absolute; bottom: -.12rem; left: -.4rem; width: 18.4rem; }
+.container .loading .television .play { display: none; position: absolute; top: 40%; left: 40%; width: 2.8rem; height: 2.8rem; }
 
-.container .firecrackers1 { position: absolute; top: 43.8%; left: -.4rem; width: 3.36rem; }
+.container .loading .loadingBox { position: absolute; top: 71%; left: 50%; width: 9.04rem; margin-left: -4.52rem; }
 
-.container .firecrackers2 { position: absolute; bottom: 2%; left: .32rem; width: 5.36rem; }
+.container .loading .loadingBox .loadingGroup { position: relative; width: 100%; height: .62rem; overflow: hidden; -webkit-border-radius: 10px; border-radius: 10px; }
 
-.container .redbag { position: absolute; bottom: 3.6%; right: .36rem; width: 5.04rem; }
+.container .loading .loadingBox .loadingGroup .loadingBg { position: absolute; left: 0; top: 0; z-index: 2; width: 100%; }
 
-.container .dog1 { position: absolute; bottom: 11.9%; left: .45rem; width: 5.04rem; z-index: 2; }
+.container .loading .loadingBox .loadingGroup .progressbar { position: absolute; left: -100%; top: 0; z-index: 1; width: 100%; }
 
-.container .draw { position: absolute; bottom: 14%; left: 5.2rem; width: 5.12rem; z-index: 3; }
+.container .loading .loadingBox .progressValue { margin-top: .32rem; text-align: center; font-size: .68rem; color: #f7f5f6; font-family: "Microsoft YaHei"; }
 
-.container .draw .projection { width: 100%; }
+.container .media { display: none; }
 
-.container .draw .draw1 { position: absolute; bottom: .32rem; left: -.24rem; width: 6rem; }
+.container .media .video { width: 100%; height: 100%; }
 
-.container .dog2 { position: absolute; bottom: 12.6%; left: 9.56rem; width: 3.52rem; z-index: 4; }
+.container .page1 { display: none; }
 
-.container .dog2 .acer { position: absolute; top: -1.65rem; left: 0; width: 2.68rem; z-index: -1; }
+.container .page1 .lamp { position: absolute; top: -10.6%; left: 0; width: 7.84rem; }
 
-.container .snowman { position: absolute; bottom: 16.8%; left: 12.72rem; width: 2.84rem; z-index: 1; }
+.container .page1 .fireworks { position: absolute; top: -7.7%; right: 0; width: 10.08rem; }
 
-.container .shake { position: absolute; bottom: .12rem; left: 0; width: 100%; }
+.container .page1 .newyear { position: absolute; top: 12.6%; width: 100%; }
 
-.container .shake .shakeHand { width: 2.76rem; margin: 0 auto; }
+.container .page1 .newyear img { width: 8.44rem; margin: 0 auto; }
+
+.container .page1 .cloud1 { position: absolute; top: 33.6%; left: .4rem; width: 2.96rem; }
+
+.container .page1 .cloud2 { position: absolute; top: 29.4%; right: -.4rem; width: 4rem; }
+
+.container .page1 .snowflake { position: absolute; top: 39.8%; left: .4rem; width: 14.56rem; }
+
+.container .page1 .snow { position: absolute; bottom: 0; left: 0; width: 100%; }
+
+.container .page1 .firecrackers1 { position: absolute; top: 43.8%; left: -.4rem; width: 3.36rem; }
+
+.container .page1 .firecrackers2 { position: absolute; bottom: 2%; left: .32rem; width: 5.36rem; }
+
+.container .page1 .redbag { position: absolute; bottom: 3.6%; right: .36rem; width: 5.04rem; }
+
+.container .page1 .dog1 { position: absolute; bottom: 11.9%; left: .45rem; width: 5.04rem; z-index: 2; }
+
+.container .page1 .draw { position: absolute; bottom: 14%; left: 5.2rem; width: 5.12rem; z-index: 3; }
+
+.container .page1 .draw .projection { width: 100%; }
+
+.container .page1 .draw .draw1 { position: absolute; bottom: .32rem; left: -.24rem; width: 6rem; }
+
+.container .page1 .dog2 { position: absolute; bottom: 12.6%; left: 9.56rem; width: 3.52rem; z-index: 4; }
+
+.container .page1 .dog2 .acer { position: absolute; top: -1.65rem; left: 0; width: 2.68rem; z-index: -1; }
+
+.container .page1 .snowman { position: absolute; bottom: 16.8%; left: 12.72rem; width: 2.84rem; z-index: 1; }
+
+.container .page1 .shake { position: absolute; bottom: .12rem; left: 0; width: 100%; }
+
+.container .page1 .shake .shakeHand { width: 2.76rem; margin: 0 auto; }
+
+.container .page2 { display: none; }
+
+.container .page2 .signBox { position: absolute; top: 1.44rem; left: 2%; width: 96%; }
+
+.container .page2 .signBox .signBg { width: 100%; }
+
+.container .page2 .signBox .signTitle { position: absolute; top: -1.12rem; left: 0; width: 100%; }
+
+.container .page2 .signBox .signTitle img { width: 79.1%; margin: 0 auto; }
+
+.container .page2 .signBox .keyword { position: absolute; bottom: .6rem; left: 0; width: 100%; }
+
+.container .page2 .signBox .keyword img { width: 86.25%; margin: 0 auto; }
+
+.container .page2 .signBox .guide { position: absolute; top: 100%; left: 0; width: 100%; margin-top: -.6rem; }
+
+.container .page2 .signBox .guide .tip img { width: 6.36rem; margin: 0 auto; }
+
+.container .page2 .signBox .guide .btns { width: 85%; margin: 0 auto; margin-top: .52rem; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+
+.container .page2 .signBox .guide .btns img { width: 5.24rem; }
+
+.container .page2 .signBox .qrcodes { display: none; position: absolute; top: 100%; left: 0; width: 100%; margin-top: .6rem; }
+
+.container .page2 .signBox .qrcodes img { margin: 0 auto; }
+
+.container .page2 .signBox .qrcodes .qrcode { width: 3rem; height: 3rem; }
+
+.container .page2 .signBox .qrcodes .word2 { width: 4.08rem; margin-top: .24rem; }
