--- a/src/metro/scss/index.scss
+++ b/src/metro/scss/index.scss
@@ -1,7 +1,7 @@
 @import '../../base/index.scss';
-html {
-  background: #ba131a;
-}
+// html {
+//   background: #ba131a;
+// }
 body{
 	position: absolute;
 	top: 0;
@@ -12,141 +12,323 @@ body{
 }
 .container{
 	position: relative;
+	width: 100%;
 	height: 100%;
+	overflow: hidden;
 	img{
 		display: block;
 		width: 100%;
 	}
-	// 灯
-	.lamp{
-		position: absolute;
-		top: -10.6%;
-		left: 0;
-		width: 7.84rem;
-	}
-	// 烟花
-	.fireworks{
-		position: absolute;
-		top: -7.7%;
-		right: 0;
-		width: 10.08rem;
-	}
-	// 新年字
-	.newyear{
-		position: absolute;
-		top: 12.6%;
+	.page{
+		position: relative;
 		width: 100%;
-		img{
-			width: 8.44rem;
-			margin: 0 auto;
+		height: 100%;
+		background-color: #ba131a;
+	}
+	// 加载页
+	.loading{
+		// display: none;
+		.firelantern{
+			position: absolute;
+			top: -10.6%;
+			left: .2rem;
+			width: 9.8rem;
 		}
-	}
-	// 云1
-	.cloud1{
-		position: absolute;
-		top: 33.6%;
-		left: .4rem;
-		width: 2.96rem;
-	}
-	// 云2
-	.cloud2{
-		position: absolute;
-		top: 29.4%;
-		right: -.4rem;
-		width: 4rem;
-	}
-	// 雪花
-	.snowflake{
-		position: absolute;
-		top: 39.8%;
-		left: .4rem;
-		width: 14.56rem;
-	}
-	// 雪
-	.snow{
-		position: absolute;
-		bottom: -.12rem;
-		left: -.4rem;
-		width: 18.4rem;
-	}
-	// 鞭炮1
-	.firecrackers1{
-		position: absolute;
-		top: 43.8%;
-		left: -.4rem;
-		width: 3.36rem;
-	}
-	// 鞭炮2
-	.firecrackers2{
-		position: absolute;
-		bottom: 2%;
-		left: .32rem;
-		width: 5.36rem;
-	}
-	// 红包
-	.redbag{
-		position: absolute;
-		bottom: 3.6%;
-		right: .36rem;
-		width: 5.04rem;
-	}
-	// 狗1
-	.dog1{
-		position: absolute;
-		bottom: 11.9%;
-		left: .45rem;
-		width: 5.04rem;
-		z-index: 2;
-	}
-	// 抽签
-	.draw{
-		position: absolute;
-		bottom: 14%;
-		left: 5.2rem;
-		width: 5.12rem;
-		z-index: 3;
-		.projection{
+		// 纸屑1
+		.confetti1{
+			position: absolute;
+			top: 12.8%;
+			left: 22.6%;
+			width: 10.92rem;
+		}
+		// 狗子雪人
+		.snowmanDog{
+			position: absolute;
+			bottom: 0;
+			left: 0;
 			width: 100%;
 		}
-		.draw1{
+		// 纸屑2
+		.confetti2{
 			position: absolute;
 			bottom: .32rem;
-			left: -.24rem;
-			width: 6rem;
+			right: .48rem;
+			width: 10.92rem;
 		}
-	}
-	// 狗2
-	.dog2{
-		position: absolute;
-		bottom: 12.6%;
-		left: 9.56rem;
-		width: 3.52rem;
-		z-index: 4;
-		.acer{
+		.word1{
 			position: absolute;
-			top: -1.65rem;
-			left: 0;
-			width: 2.68rem;
-			z-index: -1;
+			top: 5.4%;
+			right: .36rem;
+			width: 5.6rem;
+		}
+		.television{
+			position: absolute;
+			top: 24.7%;
+			left: 1.9%;
+			width: 96.2%;
+			.play{
+				display: none;
+				position: absolute;
+				top: 40%;
+				left: 40%;
+				width: 2.8rem;
+				height: 2.8rem;
+			}
+		}
+		.loadingBox{
+			position: absolute;
+			top: 71%;
+			left: 50%;
+			width: 9.04rem;
+			margin-left: -4.52rem;
+			.loadingGroup{
+				position: relative;
+				width: 100%;
+				height: .62rem;
+				overflow: hidden;
+				border-radius: 10px;
+				.loadingBg{
+					position: absolute;
+					left: 0;
+					top: 0;
+					z-index: 2;
+					width: 100%;
+				}
+				.progressbar{
+					position: absolute;
+					left: -100%;
+					top: 0;
+					z-index: 1;
+					width: 100%;
+				}
+			}
+			.progressValue{
+				margin-top: .32rem;
+				text-align: center;
+				font-size: .68rem;
+				color: #f7f5f6;
+				font-family: "Microsoft YaHei";
+			}
 		}
 	}
-	// 雪人
-	.snowman{
-		position: absolute;
-		bottom: 16.8%;
-		left: 12.72rem;
-		width: 2.84rem;
-		z-index: 1;
+	// 视频
+	.media{
+		display: none;
+		.video{
+			width: 100%;
+			height: 100%;
+		}
 	}
-	// 摇一摇
-	.shake{
-		position: absolute;
-		bottom: .12rem;
-		left: 0;
-		width: 100%;
-		.shakeHand{
-			width: 2.76rem;
-			margin: 0 auto;
+	// 首页
+	.page1{
+		display: none;
+		// 灯
+		.lamp{
+			position: absolute;
+			top: -10.6%;
+			left: 0;
+			width: 7.84rem;
+		}
+		// 烟花
+		.fireworks{
+			position: absolute;
+			top: -7.7%;
+			right: 0;
+			width: 10.08rem;
+		}
+		// 新年字
+		.newyear{
+			position: absolute;
+			top: 12.6%;
+			width: 100%;
+			img{
+				width: 8.44rem;
+				margin: 0 auto;
+			}
+		}
+		// 云1
+		.cloud1{
+			position: absolute;
+			top: 33.6%;
+			left: .4rem;
+			width: 2.96rem;
+		}
+		// 云2
+		.cloud2{
+			position: absolute;
+			top: 29.4%;
+			right: -.4rem;
+			width: 4rem;
+		}
+		// 雪花
+		.snowflake{
+			position: absolute;
+			top: 39.8%;
+			left: .4rem;
+			width: 14.56rem;
+		}
+		// 雪
+		.snow{
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+		}
+		// 鞭炮1
+		.firecrackers1{
+			position: absolute;
+			top: 43.8%;
+			left: -.4rem;
+			width: 3.36rem;
+		}
+		// 鞭炮2
+		.firecrackers2{
+			position: absolute;
+			bottom: 2%;
+			left: .32rem;
+			width: 5.36rem;
+		}
+		// 红包
+		.redbag{
+			position: absolute;
+			bottom: 3.6%;
+			right: .36rem;
+			width: 5.04rem;
+		}
+		// 狗1
+		.dog1{
+			position: absolute;
+			bottom: 11.9%;
+			left: .45rem;
+			width: 5.04rem;
+			z-index: 2;
+		}
+		// 抽签
+		.draw{
+			position: absolute;
+			bottom: 14%;
+			left: 5.2rem;
+			width: 5.12rem;
+			z-index: 3;
+			.projection{
+				width: 100%;
+			}
+			.draw1{
+				position: absolute;
+				bottom: .32rem;
+				left: -.24rem;
+				width: 6rem;
+			}
+		}
+		// 狗2
+		.dog2{
+			position: absolute;
+			bottom: 12.6%;
+			left: 9.56rem;
+			width: 3.52rem;
+			z-index: 4;
+			.acer{
+				position: absolute;
+				top: -1.65rem;
+				left: 0;
+				width: 2.68rem;
+				z-index: -1;
+			}
+		}
+		// 雪人
+		.snowman{
+			position: absolute;
+			bottom: 16.8%;
+			left: 12.72rem;
+			width: 2.84rem;
+			z-index: 1;
+		}
+		// 摇一摇
+		.shake{
+			position: absolute;
+			bottom: .12rem;
+			left: 0;
+			width: 100%;
+			.shakeHand{
+				width: 2.76rem;
+				margin: 0 auto;
+			}
+		}
+	}
+	// 签文页
+	.page2{
+		display: none;
+		.signBox{
+			position: absolute;
+			top: 1.44rem;
+			left: 2%;
+			width: 96%;
+			.signBg{
+				width: 100%;
+			}
+			.signTitle{
+				position: absolute;
+				top: -1.12rem;
+				left: 0;
+				width: 100%;
+				img{
+					width: 79.1%;
+					margin: 0 auto;
+				}
+			}
+			.keyword{
+				position: absolute;
+				bottom: .6rem;
+				left: 0;
+				width: 100%;
+				img{
+					width: 86.25%;
+					margin: 0 auto;
+				}
+			}
+			.guide{
+				position: absolute;
+				top: 100%;
+				left: 0;
+				width: 100%;
+				margin-top: -.6rem;
+				.tip{
+					img{
+						width: 6.36rem;
+						margin: 0 auto;
+					}
+				}
+				.btns{
+					width: 85%;
+					margin: 0 auto;
+					margin-top: .52rem;
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+					img{
+						width: 5.24rem;
+					}
+				}
+			}
+			.qrcodes{
+				display: none;
+				position: absolute;
+				top: 100%;
+				left: 0;
+				width: 100%;
+				margin-top: .6rem;
+				img{
+					margin: 0 auto;
+				}
+				.qrcode{
+					width: 3rem;
+					height: 3rem;
+				}
+				.word2{
+					width: 4.08rem;
+					margin-top: .24rem;
+				}
+			}
 		}
 	}
 }
