--- a/src/metro/css/index.css
+++ b/src/metro/css/index.css
@@ -1514,6 +1514,8 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 
 .container .page { position: relative; width: 100%; height: 100%; background-color: #ba131a; }
 
+.container .video_exist { width: 1.6rem; height: 1.6rem; position: absolute; right: .4rem; top: .4rem; z-index: 10; background: url(../images/normalmusic.png) no-repeat; -webkit-background-size: 1.6rem 1.6rem; background-size: 1.6rem 1.6rem; }
+
 .container .loadBefore { background-color: #ba131a; }
 
 .container .loading { display: none; }
@@ -1543,6 +1545,10 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 .container .loading .loadingBox .loadingGroup .loadingWrap .progressbar { position: absolute; left: -100%; top: 0; z-index: 1; width: 100%; }
 
 .container .loading .loadingBox .progressValue { margin-top: .32rem; text-align: center; font-size: .68rem; color: #f7f5f6; font-family: "Microsoft YaHei"; }
+
+.container .video { display: none; }
+
+.container .video video { width: 1920px; height: 1080px; }
 
 .container .media { display: none; }
 
@@ -1636,6 +1642,10 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 
 .container .page2 .synthesis img { pointer-events: auto; }
 
+.container .cover { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 100; background-color: rgba(0, 0, 0, 0.7); }
+
+.container .cover .share { position: absolute; top: .64rem; right: .72rem; width: 10.56rem; }
+
 @-webkit-keyframes draw { 0% { background-image: url(../images/draw1.png); }
   50% { background-image: url(../images/draw2.png); }
   100% { background-image: url(../images/draw3.png); } }
@@ -1679,3 +1689,33 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
   80% { -webkit-transform: translate3d(-10px, 0, 0); transform: translate3d(-10px, 0, 0); }
   90% { -webkit-transform: translate3d(-5px, 0, 0); transform: translate3d(-5px, 0, 0); }
   100% { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); } }
+
+.container .rotate { -webkit-animation: rotating 2s linear infinite; animation: rotating 2s linear infinite; }
+
+@-webkit-keyframes rotating { from { -webkit-transform: rotate(0); transform: rotate(0); }
+  to { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
+
+@keyframes rotating { from { -webkit-transform: rotate(0); transform: rotate(0); }
+  to { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
+
+.sharePage { position: relative; width: 100%; height: 100%; overflow: hidden; }
+
+.sharePage img { display: block; width: 100%; pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
+
+.sharePage .page { position: relative; width: 100%; height: 100%; background-color: #ba131a; }
+
+.sharePage .page .signBox { position: absolute; top: 1.44rem; left: 2%; width: 96%; }
+
+.sharePage .page .signBox .signBg { width: 100%; }
+
+.sharePage .page .signBox .signTitle { position: absolute; top: -1.12rem; left: 0; width: 100%; }
+
+.sharePage .page .signBox .signTitle img { width: 79.1%; margin: 0 auto; }
+
+.sharePage .page .signBox .guide { position: absolute; top: 100%; left: 0; width: 100%; margin-top: 1.88rem; }
+
+.sharePage .page .signBox .guide .btns { position: relative; z-index: 100; width: 85%; margin: 0 auto; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+
+.sharePage .page .signBox .guide .btns a { text-decoration: none; outline: 0 none; }
+
+.sharePage .page .signBox .guide .btns a img { width: 6.28rem; }
