--- a/src/metro/css/index.css
+++ b/src/metro/css/index.css
@@ -1550,11 +1550,11 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 
 .container .loading .loadingBox .progressValue { margin-top: .32rem; text-align: center; font-size: .68rem; color: #f7f5f6; font-family: "Microsoft YaHei"; }
 
-.container .video { display: none; }
+.container .videoPage { display: none; }
 
-.container .video video { width: 1920px; height: 1080px; }
+.container .videoPage video { width: 1920px; height: 1080px; }
 
-.container .media { display: none; }
+.container .media { display: none; background-color: #000; }
 
 .container .media .video { width: 100%; height: 100%; }
 
@@ -1588,11 +1588,15 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 
 .container .page1 .draw .projection { width: 100%; }
 
-.container .page1 .draw .draw1 { position: absolute; bottom: .32rem; left: -.24rem; width: 100%; background: url(../images/draw1.png) no-repeat bottom center/100%; }
+.container .page1 .draw .draw1 { position: absolute; bottom: .32rem; left: -.24rem; width: 100%; }
 
-.container .page1 .draw .draw1.active { -webkit-animation: draw 1s 2; animation: draw 1s 2; }
+.container .page1 .draw .draw1 .sign1, .container .page1 .draw .draw1 .sign2 { position: absolute; bottom: 0; left: 0; width: 100%; }
 
-.container .page1 .draw .draw1 img { opacity: 0; }
+.container .page1 .draw .draw1 .sign3 { position: absolute; top: 0; left: 50%; width: 1.24rem; -webkit-transform: translate3d(-50%, -100%, 0); transform: translate3d(-50%, -100%, 0); }
+
+.container .page1 .draw .draw1 .light { position: fixed; top: 50%; left: 50%; width: 100%; -webkit-transform: translate3d(-50%, -50%, 0); transform: translate3d(-50%, -50%, 0); }
+
+.container .page1 .draw .draw1 .sign4 { position: absolute; top: -20%; left: 50%; width: 1.6rem; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); }
 
 .container .page1 .dog2 { position: absolute; bottom: 12.6%; left: 9.56rem; width: 3.52rem; z-index: 4; }
 
@@ -1649,14 +1653,6 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 .container .cover { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 100; background-color: rgba(0, 0, 0, 0.7); }
 
 .container .cover .share { position: absolute; top: .64rem; right: .72rem; width: 10.56rem; }
-
-@-webkit-keyframes draw { 0% { background-image: url(../images/draw1.png); }
-  50% { background-image: url(../images/draw2.png); }
-  100% { background-image: url(../images/draw3.png); } }
-
-@keyframes draw { 0% { background-image: url(../images/draw1.png); }
-  50% { background-image: url(../images/draw2.png); }
-  100% { background-image: url(../images/draw3.png); } }
 
 @-webkit-keyframes cloud1 { 0% { -webkit-transform: translate3d(0, 0, 0); transform: translate3d(0, 0, 0); }
   25% { -webkit-transform: translate3d(100%, 0, 0); transform: translate3d(100%, 0, 0); }
