--- a/src/metro/css/index.css
+++ b/src/metro/css/index.css
@@ -1590,13 +1590,29 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 
 .container .page1 .draw .draw1 { position: absolute; bottom: .32rem; left: -.24rem; width: 100%; }
 
+.container .page1 .draw .draw1 .lotpotGroup { position: relative; z-index: 2; }
+
+.container .page1 .draw .draw1 .lotpotGroup.swing2 { -webkit-transform-origin: bottom center; -ms-transform-origin: bottom center; transform-origin: bottom center; -webkit-animation-name: swing2; animation-name: swing2; -webkit-animation-duration: 0.5s; animation-duration: 0.5s; }
+
 .container .page1 .draw .draw1 .sign1, .container .page1 .draw .draw1 .sign2 { position: absolute; bottom: 0; left: 0; width: 100%; }
 
-.container .page1 .draw .draw1 .sign3 { position: absolute; top: 0; left: 50%; width: 1.24rem; -webkit-transform: translate3d(-50%, -100%, 0); transform: translate3d(-50%, -100%, 0); }
+.container .page1 .draw .draw1 .sign3 { position: absolute; top: 0; left: 50%; z-index: 1; width: 1.24rem; -webkit-transform: translate3d(-50%, -100%, 0); transform: translate3d(-50%, -100%, 0); }
 
-.container .page1 .draw .draw1 .light { position: fixed; top: 50%; left: 50%; width: 100%; -webkit-transform: translate3d(-50%, -50%, 0); transform: translate3d(-50%, -50%, 0); }
+.container .page1 .draw .draw1 .sign3 img { opacity: 0; -webkit-animation-fill-mode: forwards; animation-fill-mode: forwards; -webkit-animation-duration: 1.5s; animation-duration: 1.5s; }
 
-.container .page1 .draw .draw1 .sign4 { position: absolute; top: -20%; left: 50%; width: 1.6rem; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); }
+.container .page1 .draw .draw1 .sign3 img.bounceInUp2 { -webkit-animation-name: bounceInUp2; animation-name: bounceInUp2; }
+
+.container .page1 .draw .draw1 .light { position: fixed; top: 40%; left: 50%; z-index: 2; width: 100%; -webkit-transform: translate3d(-50%, -50%, 0); transform: translate3d(-50%, -50%, 0); }
+
+.container .page1 .draw .draw1 .light img { opacity: 0; -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); }
+
+.container .page1 .draw .draw1 .light img.on { -webkit-animation: light 1.5s forwards ease-in-out; animation: light 1.5s forwards ease-in-out; }
+
+.container .page1 .draw .draw1 .sign4 { position: absolute; top: -20%; left: 50%; z-index: 2; width: 1.6rem; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); }
+
+.container .page1 .draw .draw1 .sign4 img { opacity: 0; -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); }
+
+.container .page1 .draw .draw1 .sign4 img.on { -webkit-animation: light 1.5s forwards ease-in-out; animation: light 1.5s forwards ease-in-out; }
 
 .container .page1 .dog2 { position: absolute; bottom: 12.6%; left: 9.56rem; width: 3.52rem; z-index: 4; }
 
@@ -1697,6 +1713,74 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 
 @keyframes rotating { from { -webkit-transform: rotate(0); transform: rotate(0); }
   to { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
+
+@-webkit-keyframes swing2 { 20% { -webkit-transform: rotate3d(0, 0, 1, 20deg);
+    transform: rotate3d(0, 0, 1, 20deg); }
+  40% { -webkit-transform: rotate3d(0, 0, 1, -15deg);
+    transform: rotate3d(0, 0, 1, -15deg); }
+  60% { -webkit-transform: rotate3d(0, 0, 1, 10deg);
+    transform: rotate3d(0, 0, 1, 10deg); }
+  80% { -webkit-transform: rotate3d(0, 0, 1, -10deg);
+    transform: rotate3d(0, 0, 1, -10deg); }
+  to { -webkit-transform: rotate3d(0, 0, 1, 0deg);
+    transform: rotate3d(0, 0, 1, 0deg); } }
+
+@keyframes swing2 { 20% { -webkit-transform: rotate3d(0, 0, 1, 20deg);
+    transform: rotate3d(0, 0, 1, 20deg); }
+  40% { -webkit-transform: rotate3d(0, 0, 1, -15deg);
+    transform: rotate3d(0, 0, 1, -15deg); }
+  60% { -webkit-transform: rotate3d(0, 0, 1, 10deg);
+    transform: rotate3d(0, 0, 1, 10deg); }
+  80% { -webkit-transform: rotate3d(0, 0, 1, -10deg);
+    transform: rotate3d(0, 0, 1, -10deg); }
+  to { -webkit-transform: rotate3d(0, 0, 1, 0deg);
+    transform: rotate3d(0, 0, 1, 0deg); } }
+
+@-webkit-keyframes bounceInUp2 { from, 60%, 75%, 90%, to { -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+  from { opacity: 0;
+    -webkit-transform: translate3d(0, 300px, 0);
+    transform: translate3d(0, 300px, 0); }
+  60% { opacity: 1;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0); }
+  75% { -webkit-transform: translate3d(0, 10px, 0);
+    transform: translate3d(0, 10px, 0); }
+  90% { -webkit-transform: translate3d(0, -5px, 0);
+    transform: translate3d(0, -5px, 0); }
+  to { opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); } }
+
+@keyframes bounceInUp2 { from, 60%, 75%, 90%, to { -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); }
+  from { opacity: 0;
+    -webkit-transform: translate3d(0, 300px, 0);
+    transform: translate3d(0, 300px, 0); }
+  60% { opacity: 1;
+    -webkit-transform: translate3d(0, -20px, 0);
+    transform: translate3d(0, -20px, 0); }
+  75% { -webkit-transform: translate3d(0, 10px, 0);
+    transform: translate3d(0, 10px, 0); }
+  90% { -webkit-transform: translate3d(0, -5px, 0);
+    transform: translate3d(0, -5px, 0); }
+  to { opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); } }
+
+@-webkit-keyframes light { 0% { opacity: 0;
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  100% { opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
+
+@keyframes light { 0% { opacity: 0;
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  100% { opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1); } }
 
 .sharePage { position: relative; width: 100%; height: 100%; overflow: hidden; }
 
