--- a/src/metro/css/index.css
+++ b/src/metro/css/index.css
@@ -1518,7 +1518,7 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 
 .container .page { position: relative; width: 100%; height: 100%; background-color: #ba131a; }
 
-.container .video_exist { width: 1.6rem; height: 1.6rem; position: absolute; right: .4rem; top: .4rem; z-index: 10; background: url(../images/normalmusic.png) no-repeat; -webkit-background-size: 1.6rem 1.6rem; background-size: 1.6rem 1.6rem; }
+.container .video_exist { display: none; width: 1.6rem; height: 1.6rem; position: absolute; right: .4rem; top: .4rem; z-index: 10; background: url(../images/normalmusic.png) no-repeat; -webkit-background-size: 1.6rem 1.6rem; background-size: 1.6rem 1.6rem; }
 
 .container .loadBefore { background-color: #ba131a; }
 
@@ -1620,9 +1620,9 @@ body { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow:
 
 .container .page1 .snowman { position: absolute; bottom: 16.8%; left: 12.72rem; width: 2.84rem; z-index: 1; }
 
-.container .page1 .shake { position: absolute; bottom: .12rem; left: 0; width: 100%; }
+.container .page1 .shake { position: absolute; top: 29.4%; left: 0; width: 100%; }
 
-.container .page1 .shake .shakeHand { width: 2.76rem; margin: 0 auto; }
+.container .page1 .shake .shakeHand { width: 2.48rem; margin: 0 auto; }
 
 .container .page1 .shake.swing { -webkit-transform-origin: bottom center; -ms-transform-origin: bottom center; transform-origin: bottom center; -webkit-animation-duration: 1.5s; animation-duration: 1.5s; }
 
