--- a/src/feihe/css/index.css
+++ b/src/feihe/css/index.css
@@ -1577,3 +1577,35 @@ html, body { width: 100%; height: 100%; overflow: hidden; background: #ffffff; }
 .templet { display: block; z-index: 11; background: url(../images/briefBg.png) #000000 no-repeat center top/100%; }
 
 .templet img { display: block; width: 100%; }
+
+.templet .templet-tree { position: absolute; top: 0; left: 0; width: 13.72rem; }
+
+.templet .templet-lantern { position: absolute; top: 0; left: 66.6%; width: 4.96rem; }
+
+.templet .templet-lantern2 { position: absolute; bottom: 0; left: 0; width: 2.84rem; z-index: 2; }
+
+.templet .templet-pine { position: absolute; bottom: 0; right: 0; width: 7.6rem; }
+
+.templet .templet-card { position: absolute; bottom: 2.9%; left: 21.6%; width: 7.72rem; }
+
+.templet .templet-lantern3 { position: absolute; top: 49.9%; left: 75.7%; width: 2rem; z-index: 2; }
+
+.templet .templet-cloud { position: absolute; top: 28.6%; right: 0; width: 5.6rem; z-index: 2; }
+
+.templet .arrow-left { position: absolute; top: 46.6%; left: 3.4%; width: .88rem; }
+
+.templet .arrow-right { position: absolute; top: 46.6%; right: 3.4%; width: .88rem; }
+
+.templet .upload-area { position: absolute; top: 15.5%; left: 50%; width: 10.74rem; height: 16.32rem; -webkit-transform: translate3d(-50%, 0, 0); transform: translate3d(-50%, 0, 0); }
+
+.templet .upload-area .upload-box { position: absolute; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
+
+.templet .upload-area .upload-box .templetBg { display: block; width: 100%; }
+
+.templet .upload-area .templetImg { position: absolute; top: 0; left: 0; z-index: 2; width: 100%; height: 100%; }
+
+.templet .upload-area .fileUpload { position: absolute; left: 0; top: 0; z-index: 5; display: block; width: 100%; height: 100%; opacity: 0; }
+
+.share { z-index: 11; background: url(../images/shareBg.png) #000000 no-repeat center top/100%; }
+
+.share img { display: block; width: 100%; }
