--- a/src/feihe/scss/index.scss
+++ b/src/feihe/scss/index.scss
@@ -225,4 +225,110 @@ html,body{
 		display: block;
 		width: 100%;
 	}
+	.templet-tree{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 13.72rem;
+	}
+	.templet-lantern{
+		position: absolute;
+		top: 0;
+		left: 66.6%;
+		width: 4.96rem;
+	}
+	.templet-lantern2{
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 2.84rem;
+		z-index: 2;
+	}
+	.templet-pine{
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		width: 7.6rem;
+	}
+	.templet-card{
+		position: absolute;
+		bottom: 2.9%;
+		left: 21.6%;
+		width: 7.72rem;
+	}
+	.templet-lantern3{
+		position: absolute;
+		top: 49.9%;
+		left: 75.7%;
+		width: 2rem;
+		z-index: 2;
+	}
+	.templet-cloud{
+		position: absolute;
+		top: 28.6%;
+		right: 0;
+		width: 5.6rem;
+		z-index: 2;
+	}
+	.arrow-left{
+		position: absolute;
+		top: 46.6%;
+		left: 3.4%;
+		width: .88rem;
+	}
+	.arrow-right{
+		position: absolute;
+		top: 46.6%;
+		right: 3.4%;
+		width: .88rem;
+	}
+	.upload-area{
+		position: absolute;
+		top: 15.5%;
+		left: 50%;
+		// width: 11.72rem;
+		// height: 17.2rem;
+		width: 10.74rem;
+		height: 16.32rem;
+		transform: translate3d(-50%,0,0);
+		.upload-box{
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 1;
+			width: 100%;
+			height: 100%;
+			.templetBg{
+				display: block;
+				width: 100%;
+			}
+		}
+		.templetImg{
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 2;
+			width: 100%;
+			height: 100%;
+		}
+		.fileUpload{
+			position: absolute;
+			left: 0;
+			top: 0;
+			z-index: 5;
+			display: block;
+			width: 100%;
+			height: 100%;
+			opacity: 0;
+		}
+	}
+}
+// 分享页
+.share{
+	z-index: 11;
+	background: url(../images/shareBg.png) #000000 no-repeat center top/100%;
+	img{
+		display: block;
+		width: 100%;
+	}
 }
